# CheBo

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build-log.txt  package.json  pnpm-lock.yaml  tool_registry.rs  tsconfig.app.json  vite.config.ts
.cursor/rules/: product-doc.mdc
docs/: AI_PRODUCT_ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  CONTEXT.md  DEVELOPMENT.md  FINAL_DESIGN.md  MVP_PLAN.md  OpenHuman_Design.md  PET_AMBIENT_AGENT.md  PRD.md  PRODUCT.md  VOICE_INTEGRATION.md  task_progress.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: style.css
frontend/src-tauri/: Cargo.toml  CargoCheckErrors.txt  gen_voice.py  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: agent.rs  character.rs  chat_router.rs  commands.rs  db.rs  lib.rs  lib_state.rs  llm.rs  local_embed.rs  memory.rs  memory_controller.rs  memory_vector.rs  perception.rs  provider_registry.rs  sandbox.rs  tool_registry.rs  tool_trait.rs  tools.rs  tray.rs  vault.rs  voice.rs
frontend/src-tauri/src/task/: mod.rs  task_events.rs  task_planner.rs
scripts/: clean_commands.py  deploy-docs.mjs  gen_voice_rs.py  write_chebo_config.py  write_companion.py  write_emotion.py  write_pet_doc.py  write_phase_b_doc.py
src/: App.vue
src-tauri/: Cargo.toml  check_err.txt  tauri.conf.json
src-tauri/src/: character.rs  chat_intent.rs  commands.rs  context_builder.rs  db.rs  event_bus.rs  intent_router.rs  lib.rs  lib_state.rs  llm.rs  memory.rs  memory_controller.rs  memory_tree.rs  memory_vector.rs  pet.rs  planner.rs  tool_dispatcher.rs  tool_registry.rs  tool_trait.rs  working_memory.rs
src/components/: AssistantLayout.vue  ChatInput.vue  CheboAvatar.vue  MessageList.vue  PetStatus.vue  TabBar.vue  ToolConfirmDialog.vue
src/composables/: useAppMode.ts  useCrystalGirlSprite.ts  useVoice.ts
src/config/: chebo.ts
(+26 files in other folders)
